--- a/Mac Linux USB Loader/en.lproj/MainMenu.xib
+++ b/Mac Linux USB Loader/en.lproj/MainMenu.xib
@@ -748,6 +748,14 @@
 									<reference key="NSOnImage" ref="1033313550"/>
 									<reference key="NSMixedImage" ref="310636482"/>
 								</object>
+								<object class="NSMenuItem" id="799737216">
+									<reference key="NSMenu" ref="388842427"/>
+									<string key="NSTitle">View GitHub Page</string>
+									<string key="NSKeyEquiv"/>
+									<int key="NSMnemonicLoc">2147483647</int>
+									<reference key="NSOnImage" ref="1033313550"/>
+									<reference key="NSMixedImage" ref="310636482"/>
+								</object>
 							</array>
 							<string key="NSName">_NSHelpMenu</string>
 						</object>
@@ -908,7 +916,7 @@
 											<int key="NSvFlags">2322</int>
 											<string key="NSFrameSize">{226, 154}</string>
 											<reference key="NSSuperview" ref="757830437"/>
-											<reference key="NSNextKeyView" ref="967479522"/>
+											<reference key="NSNextKeyView" ref="478119800"/>
 											<string key="NSReuseIdentifierKey">_NS:13</string>
 											<object class="NSTextContainer" key="NSTextContainer" id="556941551">
 												<object class="NSLayoutManager" key="NSLayoutManager">
@@ -1066,7 +1074,7 @@ VGhhbmtzIGEgbWlsbGlvbiE</bytes>
 							</array>
 							<string key="NSFrame">{{186, 20}, {241, 94}}</string>
 							<reference key="NSSuperview" ref="698088862"/>
-							<reference key="NSNextKeyView" ref="478119800"/>
+							<reference key="NSNextKeyView" ref="757830437"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSsFlags">133200</int>
 							<reference key="NSVScroller" ref="967479522"/>
@@ -1435,6 +1443,22 @@ VGhhbmtzIGEgbWlsbGlvbiE</bytes>
 						<reference key="destination" ref="105054396"/>
 					</object>
 					<int key="connectionID">615</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">openGithubPage:</string>
+						<reference key="source" ref="737481470"/>
+						<reference key="destination" ref="852446385"/>
+					</object>
+					<int key="connectionID">616</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBActionConnection" key="connection">
+						<string key="label">openGithubPage:</string>
+						<reference key="source" ref="737481470"/>
+						<reference key="destination" ref="799737216"/>
+					</object>
+					<int key="connectionID">618</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -1982,6 +2006,7 @@ VGhhbmtzIGEgbWlsbGlvbiE</bytes>
 						<reference key="object" ref="388842427"/>
 						<array class="NSMutableArray" key="children">
 							<reference ref="253952766"/>
+							<reference ref="799737216"/>
 						</array>
 						<reference key="parent" ref="1050483726"/>
 					</object>
@@ -2464,6 +2489,11 @@ VGhhbmtzIGEgbWlsbGlvbiE</bytes>
 						<reference key="object" ref="380154538"/>
 						<reference key="parent" ref="720053764"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">617</int>
+						<reference key="object" ref="799737216"/>
+						<reference key="parent" ref="388842427"/>
+					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -2611,6 +2641,7 @@ VGhhbmtzIGEgbWlsbGlvbiE</bytes>
 				<string key="611.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="613.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="614.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
+				<string key="617.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="72.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
 				<string key="79.IBPluginDependency">com.apple.InterfaceBuilder.CocoaPlugin</string>
@@ -2622,7 +2653,7 @@ VGhhbmtzIGEgbWlsbGlvbiE</bytes>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">615</int>
+			<int key="maxID">618</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2632,6 +2663,7 @@ VGhhbmtzIGEgbWlsbGlvbiE</bytes>
 					<dictionary class="NSMutableDictionary" key="actions">
 						<string key="makeLiveUSB:">id</string>
 						<string key="openDiskUtility:">id</string>
+						<string key="openGithubPage:">id</string>
 						<string key="updateDeviceList:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
@@ -2643,22 +2675,34 @@ VGhhbmtzIGEgbWlsbGlvbiE</bytes>
 							<string key="name">openDiskUtility:</string>
 							<string key="candidateClassName">id</string>
 						</object>
+						<object class="IBActionInfo" key="openGithubPage:">
+							<string key="name">openGithubPage:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="updateDeviceList:">
 							<string key="name">updateDeviceList:</string>
 							<string key="candidateClassName">id</string>
 						</object>
 					</dictionary>
-					<object class="NSMutableDictionary" key="outlets">
-						<string key="NS.key.0">usbDriveDropdown</string>
-						<string key="NS.object.0">NSPopUpButton</string>
-					</object>
-					<object class="NSMutableDictionary" key="toOneOutletInfosByName">
-						<string key="NS.key.0">usbDriveDropdown</string>
-						<object class="IBToOneOutletInfo" key="NS.object.0">
+					<dictionary class="NSMutableDictionary" key="outlets">
+						<string key="makeUSBButton">NSButton</string>
+						<string key="usbDriveDropdown">NSPopUpButton</string>
+						<string key="window">NSWindow</string>
+					</dictionary>
+					<dictionary class="NSMutableDictionary" key="toOneOutletInfosByName">
+						<object class="IBToOneOutletInfo" key="makeUSBButton">
+							<string key="name">makeUSBButton</string>
+							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="usbDriveDropdown">
 							<string key="name">usbDriveDropdown</string>
 							<string key="candidateClassName">NSPopUpButton</string>
 						</object>
-					</object>
+						<object class="IBToOneOutletInfo" key="window">
+							<string key="name">window</string>
+							<string key="candidateClassName">NSWindow</string>
+						</object>
+					</dictionary>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">./Classes/Document.h</string>
