usability enhancements, bug fixes, began implementing preferences panel

--- a/Mac Linux USB Loader/en.lproj/Document.xib
+++ b/Mac Linux USB Loader/en.lproj/Document.xib
@@ -71,7 +71,6 @@
 											<array class="NSMutableArray" key="NSSubviews"/>
 											<string key="NSFrame">{{168, 13}, {193, 32}}</string>
 											<reference key="NSSuperview" ref="1037603364"/>
-											<reference key="NSWindow"/>
 											<string key="NSReuseIdentifierKey">_NS:9</string>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="15053030">
@@ -100,7 +99,6 @@
 											<array class="NSMutableArray" key="NSSubviews"/>
 											<string key="NSFrame">{{361, 13}, {130, 32}}</string>
 											<reference key="NSSuperview" ref="1037603364"/>
-											<reference key="NSWindow"/>
 											<string key="NSReuseIdentifierKey">_NS:9</string>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="160355437">
@@ -124,7 +122,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{171, 114}, {299, 41}}</string>
 											<reference key="NSSuperview" ref="1037603364"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="336928385"/>
 											<string key="NSReuseIdentifierKey">_NS:1535</string>
 											<bool key="NSEnabled">YES</bool>
@@ -174,7 +171,6 @@
 											</set>
 											<string key="NSFrame">{{0, -1}, {166, 166}}</string>
 											<reference key="NSSuperview" ref="1037603364"/>
-											<reference key="NSWindow"/>
 											<string key="NSReuseIdentifierKey">_NS:9</string>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSImageCell" key="NSCell" id="365278556">
@@ -196,7 +192,6 @@
 									</array>
 									<string key="NSFrameSize">{505, 175}</string>
 									<reference key="NSSuperview" ref="899740021"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="226954976"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 									<string key="NSClassName">NSView</string>
@@ -210,7 +205,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{53, 19}, {446, 20}}</string>
 											<reference key="NSSuperview" ref="295041998"/>
-											<reference key="NSWindow"/>
 											<string key="NSReuseIdentifierKey">_NS:9</string>
 											<string key="NSHuggingPriority">{250, 250}</string>
 											<int key="NSpiFlags">16397</int>
@@ -221,7 +215,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{17, 22}, {16, 16}}</string>
 											<reference key="NSSuperview" ref="295041998"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="643601670"/>
 											<string key="NSReuseIdentifierKey">_NS:945</string>
 											<int key="NSpiFlags">28938</int>
@@ -232,7 +225,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{14, 62}, {82, 17}}</string>
 											<reference key="NSSuperview" ref="295041998"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="605216515"/>
 											<string key="NSReuseIdentifierKey">_NS:1535</string>
 											<bool key="NSEnabled">YES</bool>
@@ -253,7 +245,6 @@
 											<int key="NSvFlags">268</int>
 											<string key="NSFrame">{{98, 55}, {404, 26}}</string>
 											<reference key="NSSuperview" ref="295041998"/>
-											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="48310739"/>
 											<string key="NSReuseIdentifierKey">_NS:9</string>
 											<string key="NSHuggingPriority">{242, 750}</string>
@@ -307,7 +298,6 @@
 									</array>
 									<string key="NSFrame">{{0, 176}, {505, 103}}</string>
 									<reference key="NSSuperview" ref="899740021"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="257761973"/>
 									<string key="NSReuseIdentifierKey">_NS:13</string>
 									<string key="NSClassName">NSView</string>
@@ -315,7 +305,6 @@
 							</array>
 							<string key="NSFrameSize">{505, 279}</string>
 							<reference key="NSSuperview" ref="568628114"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="1037603364"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<int key="NSDividerStyle">2</int>
@@ -323,7 +312,6 @@
 					</array>
 					<string key="NSFrameSize">{505, 279}</string>
 					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="899740021"/>
 					<bool key="NSViewIsLayerTreeHost">YES</bool>
 				</object>
@@ -1421,7 +1409,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">100259</int>
+			<int key="maxID">100265</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -1433,6 +1421,7 @@
 						<string key="makeLiveUSB:">id</string>
 						<string key="openDiskUtility:">id</string>
 						<string key="openGithubPage:">id</string>
+						<string key="showApplicationPrefs:">id</string>
 						<string key="updateDeviceList:">id</string>
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="actionInfosByName">
@@ -1452,6 +1441,10 @@
 							<string key="name">openGithubPage:</string>
 							<string key="candidateClassName">id</string>
 						</object>
+						<object class="IBActionInfo" key="showApplicationPrefs:">
+							<string key="name">showApplicationPrefs:</string>
+							<string key="candidateClassName">id</string>
+						</object>
 						<object class="IBActionInfo" key="updateDeviceList:">
 							<string key="name">updateDeviceList:</string>
 							<string key="candidateClassName">id</string>
@@ -1459,6 +1452,7 @@
 					</dictionary>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="makeUSBButton">NSButton</string>
+						<string key="prefsWindow">NSPanel</string>
 						<string key="spinner">NSProgressIndicator</string>
 						<string key="usbDriveDropdown">NSPopUpButton</string>
 						<string key="window">NSWindow</string>
@@ -1467,6 +1461,10 @@
 						<object class="IBToOneOutletInfo" key="makeUSBButton">
 							<string key="name">makeUSBButton</string>
 							<string key="candidateClassName">NSButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="prefsWindow">
+							<string key="name">prefsWindow</string>
+							<string key="candidateClassName">NSPanel</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="spinner">
 							<string key="name">spinner</string>
